# Programming-Languages

C_Tutorial_00/: CMakeLists.txt
C_Tutorial_00/__MACOSX/: ._c_tut
C_Tutorial_00/__MACOSX/c_tut/: ._.idea  ._src
C_Tutorial_00/__MACOSX/c_tut/src/: ._argc-argv.c  ._array-arg.c  ._array-ptr.c  ._array.c  ._file.c  ._functions.c  ._hello.c  ._if-then-else.c  ._mem-alloc.c  ._pointer.c  ._ptr-arg-2.c  ._ptr-arg-3.c  ._ptr-arg.c  ._ptr-func.c  ._ptr-problems.c  ._ref-arg.c  ._strings.c  ._struct.c  ._type-conv.c  ._types.c
C_Tutorial_00/c_tut/: CMakeLists.txt
C_Tutorial_00/c_tut/src/: array.c  calc.c  file.c  if-then-else.c  ptr-arg-2.c  types.c  words.c
C_Tutorial_01/output/: OriWeissLab1Output.txt
C_Tutorial_01/src/: processor.c  processor.h  processor_test.c
Intro_to_lex_07/: flex_t1in.txt
Intro_to_lex_07/output/: output.txt
Intro_to_lex_07/src/: flex_t1.c  flex_t1.h  flex_t1.l
Intro_to_yacc_calc_08/: CMakeLists.txt  output.txt
Intro_to_yacc_calc_08/src/: calc.c  calc.h  calc.l  calc.y
Intro_to_yacc_tms_08/: output.txt
Intro_to_yacc_tms_08/src/: ciProlog-transcript.txt  ciProlog.c  ciProlog.h  ciProlog.l  ciProlog.y
Nested_Cases_Scanner_04/: CMakeLists.txt
Nested_Cases_Scanner_04/Output/: output.txt
Nested_Cases_Scanner_04/src/: main.c  scanner.c  scanner.h  scanner_ad_hoc.c
Parser_06/output/: notWorkin01.txt  notWorking03.txt  notWorking04.txt  notWorking05.txt  notWroking02.txt  workingInput.txt
Parser_06/src/: eval.c  eval.h  main.c  parser.c  parser.h  scanner.h  scanner_ad_hoc.c
Perosnal_Records_Database_03/Output/: outputTest.txt
State_Transition_Table_Scanner_05/: output.txt
(+8 files in other folders)
