cmake_minimum_required(VERSION 3.10)
project(OriWeissLab01 C)

set(CMAKE_C_STANDARD 11)

add_executable(OriWeissLab01
        __MACOSX/c_tut/src/._argc-argv.c
        __MACOSX/c_tut/src/._array-arg.c
        __MACOSX/c_tut/src/._array-ptr.c
        __MACOSX/c_tut/src/._array.c
        __MACOSX/c_tut/src/._file.c
        __MACOSX/c_tut/src/._functions.c
        __MACOSX/c_tut/src/._hello.c
        __MACOSX/c_tut/src/._if-then-else.c
        __MACOSX/c_tut/src/._mem-alloc.c
        __MACOSX/c_tut/src/._pointer.c
        __MACOSX/c_tut/src/._ptr-arg-2.c
        __MACOSX/c_tut/src/._ptr-arg-3.c
        __MACOSX/c_tut/src/._ptr-arg.c
        __MACOSX/c_tut/src/._ptr-func.c
        __MACOSX/c_tut/src/._ptr-problems.c
        __MACOSX/c_tut/src/._ref-arg.c
        __MACOSX/c_tut/src/._strings.c
        __MACOSX/c_tut/src/._struct.c
        __MACOSX/c_tut/src/._type-conv.c
        __MACOSX/c_tut/src/._types.c
        c_tut/src/argc-argv.c
        c_tut/src/array-arg.c
        c_tut/src/array-ptr.c
        c_tut/src/array.c
        c_tut/src/calc.c
        c_tut/src/file.c
        c_tut/src/functions.c
        c_tut/src/hello.c
        c_tut/src/if-then-else.c
        c_tut/src/mem-alloc.c
        c_tut/src/pointer.c
        c_tut/src/ptr-arg-2.c
        c_tut/src/ptr-arg-3.c
        c_tut/src/ptr-arg.c
        c_tut/src/ptr-func.c
        c_tut/src/ptr-problems.c
        c_tut/src/ref-arg.c
        c_tut/src/strings.c
        c_tut/src/struct.c
        c_tut/src/type-conv.c
        c_tut/src/types.c
        c_tut/src/words.c)
